--- a/Hamburger Menu/index.html
+++ b/Hamburger Menu/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- partial:index.partial.html -->
-<div class="frame">
+<div class="frame" style="background-color:#3faf82">
   <div class="center">
 		<div class="menu-icon">
 			<div class="line-1"></div>
