--- a/DevDetective/index.html
+++ b/DevDetective/index.html
@@ -49,32 +49,32 @@
                   />
                   <div class="profile-info-wrapper">
                     <div>
-                      <h2 id="id">Pranay Gupta</h2>
+                      <h2 id="id"></h2>
                       <a
-                        href="https://github.com/thepranaygupta"
+                        href=""
                         target="_blank"
                         id="blog"
-                        >@thepranaygupta</a
+                        ></a
                       >
                     </div>
-                    <p id="date">Joined 05 May 2020</p>
+                    <p id="date"></p>
                   </div>
                 </div>
                 <p id="bio">
-                  internet craftsman 🛠️ • building @propeers-in • tech @codehelp
+                  
                 </p>
                 <div class="profile-stats-wrapper">
                   <div class="profile-stats">
                     <p class="stat-title">Repos</p>
-                    <p class="stat-val" id="repos">77</p>
+                    <p class="stat-val" id="repos"></p>
                   </div>
                   <div class="profile-stats">
                     <p class="stat-title">Followers</p>
-                    <p class="stat-val" id="followers">747</p>
+                    <p class="stat-val" id="followers"></p>
                   </div>
                   <div class="profile-stats">
                     <p class="stat-title">Following</p>
-                    <p class="stat-val" id="following">158</p>
+                    <p class="stat-val" id="following"></p>
                   </div>
                 </div>
                 <div class="profile-bottom-wrapper">
@@ -83,14 +83,14 @@
                       <div class="bottom-icon">
                         <i class="fa-solid fa-location-dot"></i>
                       </div>
-                      <p id="location">Kolkata,IN</p>
+                      <p id="location"></p>
                     </div>
                     <div class="profile-info">
                       <div class="bottom-icon">
                         <i class="fa-brands fa-x-twitter"></i>
                       </div>
 
-                      <a href="#" id="twitter">thepranaygupta</a>
+                      <a href="#" id="twitter"></a>
                     </div>
                   </div>
                   <div class="bottom">
@@ -98,14 +98,14 @@
                       <div class="bottom-icon">
                         <i class="fa-solid fa-link"></i>
                       </div>
-                      <a href="#" id="link">thepranaygupta.bio.link</a>
+                      <a href="#" id="link"></a>
                     </div>
 
                     <div class="profile-info">
                       <div class="bottom-icon">
                         <i class="fa-solid fa-building"></i>
                       </div>
-                      <p id="company">@propeers.in</p>
+                      <p id="company"></p>
                     </div>
                   </div>
                 </div>
