--- a/white-lotus-responsive/index.html
+++ b/white-lotus-responsive/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The White Lotus</title>
     <link rel="stylesheet" href="swiper-bundle.min.css">
     <link rel="stylesheet" href="styles.css" />
     <script
